# simple_tiling_window_manager

./: CMakeLists.txt  LICENSE  dll.c  dll.h  main.c  readme.md
